--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@emotion/core": "^10.0.10",
     "@emotion/styled": "^10.0.12",
     "@material-ui/core": "^4.1.1",
+    "@material-ui/styles": "^4.1.1",
     "axios": "^0.19.0",
     "helmet": "^3.18.0",
     "history": "^4.9.0",
