--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,10 +1,11 @@
 {
-    "short_name": "React App",
-    "name": "Create React App Sample",
+    "short_name": "HobbyTalks app",
+    "name": "HobbyTalks podcast app",
+    "description": "App for comfortable listening of hobbytalks podcast",
     "icons": [
         {
             "src": "favicon.ico",
-            "sizes": "64x64 32x32 24x24 16x16",
+            "sizes": "256x256 192x192 64x64 32x32 24x24 16x16",
             "type": "image/x-icon"
         }
     ],
